--- a/Blazor/Components/StatusCard.razor
+++ b/Blazor/Components/StatusCard.razor
@@ -1,9 +1,9 @@
 @using DomainModels
 
-<div class="card shadow-sm @borderClass">
+<div class="card shadow-sm @BorderClass">
     <div class="card-body">
         <h5 class="card-title">
-            <i class="@iconClass"></i> @Title
+            <i class="@IconClass"></i> @Title
         </h5>
         <p class="card-text">
             @if (HealthCheck is null)
