--- a/Blazor/_Imports.razor
+++ b/Blazor/_Imports.razor
@@ -12,3 +12,5 @@
 @using DomainModels
 @using Blazor.Services
 @using System.Net.Http.Json
+@using Blazor.Components
+@inject Blazor.Services.APIService ApiService
