--- a/Blazor/Layout/NavMenu.razor
+++ b/Blazor/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-phone"></span> authDemo
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/usersearch" Match="NavLinkMatch.All">
+                <span class="bi bi-search"></span> Brugersøgning
+            </NavLink>
+        </li>
     </nav>
 </div>
 
