--- a/Blazor/Layout/NavMenu.razor
+++ b/Blazor/Layout/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="bi bi-search"></span> Brugersøgning
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/dummydata" Match="NavLinkMatch.All">
+                <span class="bi bi-database-fill"></span> Dummy Data Generator
+            </NavLink>
+        </li>
     </nav>
 </div>
 
