--- a/Blazor/Pages/DummyDataGenerator.razor
+++ b/Blazor/Pages/DummyDataGenerator.razor
@@ -451,7 +451,7 @@ else
     {
         // Simulerer data generering
         var faker = new Faker(locale);
-        var users = faker.Generate(100);
+        // Simulerer generering af 100 users
         await Task.Delay(faker.Random.Int(50, 200)); // Simulerer variabel performance
     }
 
